# moka

./: .cirrus.yml  .cirrus.yml-DISABLED  .codecov.yml  .gitignore  .gitpod.yml  .markdownlint.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION-GUIDE.md  NOTICE  README.md  RELEASES.md  build.rs
.cargo/: config.toml
.ci_extras/: build_linux_cross.rs  pin-crate-vers-kani.sh  pin-crate-vers-msrv.sh  pin-crate-vers-nightly.sh  remove-examples-msrv.sh
.circleci/: config.yml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  ensure-rust-toolchains-installed.sh
.github/: FUNDING.yml
.github/workflows/: Audit.yml  CI.yml  CIArm64.yml  CIQuantaDisabled.yml  CIQuantaEnabled.yml  Codecov.yml  Kani.yml  Lints.yml  LinuxCrossCompileTest.yml  Loom.yml  Miri.yml  Skeptic.yml  Trybuild.yml
benches/: Cargo.toml  cache_ops.rs
benches/src/: lib.rs
doc/: migration-guide.md
examples/: README.md  append_value_async.rs  append_value_sync.rs  async_example.rs  bounded_counter_async.rs  bounded_counter_sync.rs  cascading_drop_async.rs  counter_async.rs  counter_sync.rs  entry_lifecycle.rs  eviction_listener.rs  eviction_listener_sync.rs  jittered_expiry_policy_sync.rs  reinsert_expired_entries_sync.rs  size_aware_eviction.rs  size_aware_eviction_sync.rs  sync_example.rs  try_append_value_async.rs  try_append_value_sync.rs
src/: builder.rs  cache.rs  cht.rs  common.rs  dash.rs  deque.rs  frequency_sketch.rs  future.rs  lfu.rs  lib.rs  naive_lfu.rs  notification.rs  ops.rs  policy.rs  segment.rs  stats.rs  sync.rs  sync_base.rs  thread_pool.rs  unsync.rs
src/cht/: iter.rs  map.rs  segment.rs  test_util.rs
src/cht/map/: bucket.rs  bucket_array_ref.rs
src/cht/segment/: map.rs
src/cht/test_util/: tests.rs
src/common/: atomic_time.rs  atomic_time_compat.rs  base_cache.rs  builder_utils.rs  concurrent.rs  deque.rs  deques.rs  entry.rs  error.rs  frequency_sketch.rs  housekeeper.rs  iter.rs  notification.rs  policy_impl.rs  test_utils.rs  thread_pool.rs  time.rs  time_atomic64.rs  time_compat.rs  timer_wheel.rs  unsafe_weak_pointer.rs
src/common/concurrent/: arc.rs  constants.rs  debug_counters.rs  deques.rs  entry_info.rs  housekeeper.rs  thread_pool.rs
src/common/concurrent/atomic_time/: atomic_time.rs  atomic_time_compat.rs
src/common/time/: atomic_time.rs  clock.rs  clock_compat.rs  clock_quanta.rs  instant.rs
src/dash/: base_cache.rs  builder.rs  cache.rs  debug_fmt.rs  iter.rs  mapref.rs
src/future/: base_cache.rs  builder.rs  cache.rs  entry_selector.rs  housekeeper.rs  invalidator.rs  key_lock.rs  moka_rt.rs  notifier.rs  value_initializer.rs
src/notification/: notifier.rs
src/stats/: cache_stats.rs  stats_counter.rs
src/sync/: base_cache.rs  builder.rs  cache.rs  debug_counters.rs  debug_fmt.rs  deques.rs  entry_info.rs  entry_selector.rs  housekeeper.rs  invalidator.rs  iter.rs  key_lock.rs  segment.rs  stats_counter.rs  value_initializer.rs
src/sync_base/: base_cache.rs  invalidator.rs  iter.rs  key_lock.rs  removal_notifier.rs
src/unsync/: builder.rs  cache.rs  debug_fmt.rs  deques.rs  iter.rs
tests/: and_compute_with_race.rs  entry_api_actix_rt2.rs  entry_api_async_std.rs  entry_api_sync.rs  entry_api_tokio.rs  runtime_actix_rt1.rs  runtime_actix_rt2.rs  runtime_async_std.rs  runtime_tokio.rs  skeptic.rs  timer_wheel_panic_test.rs
tests/compile_tests/dash/clone/: dash_cache_clone.rs  dash_cache_clone.stderr
tests/compile_tests/default/clone/: sync_cache_clone.rs  sync_cache_clone.stderr  sync_seg_cache_clone.rs  sync_seg_cache_clone.stderr
tests/compile_tests/future/clone/: future_cache_clone.rs  future_cache_clone.stderr
tests/ui/future/: get_with_non_send_future.rs  get_with_non_send_future.stderr  get_with_non_static_future.rs  get_with_non_static_future.stderr  try_get_with_non_send_future.rs  try_get_with_non_send_future.stderr  try_get_with_non_static_future.rs  try_get_with_non_static_future.stderr
